--- a/CSS_WorkSpace/public/07/views/home.ejs
+++ b/CSS_WorkSpace/public/07/views/home.ejs
@@ -16,7 +16,7 @@
             %>
             <tr>
                 <td><%=car.cno %></td>
-                <td><%=car.name %></td>
+                <td><a href="/detail/<%=car.cno %>"><%=car.name %></a></td>
                 <td><%=car.price %></td>
                 <td><%=car.company %></td>
                 <td><%=car.year %></td>
