--- a/CSS_WorkSpace/public/07/views/input.ejs
+++ b/CSS_WorkSpace/public/07/views/input.ejs
@@ -3,7 +3,7 @@
     <%- include('header.ejs') %>
     <div class="container">
         <h3>중고차 정보 등록</h3>
-        <form action="input_ok" method="get">
+        <form action="input" method="POST">
         <table class="table table-bordered">
             <tr>
                 <th>차종</th>
